--- a/calculator.css
+++ b/calculator.css
@@ -1,14 +1,14 @@
     .background {
-        font-family: 'Inconsolata', monospace;
+        font-family: 'Lucida Console', Monaco, monospace;
         color: #555;
-    }
+        }
     body {
         background-color: #729fe2;
     }
     .container {
-        width: 320px;
+        width: 315px;
         background-color: rgb(18, 181, 231);
-        margin: 120px auto;
+        margin: 70px auto;
     }
     table {
         width: 100%;
@@ -17,17 +17,18 @@
     td {
         width: 25%;
     }
+    /* Lets make a burning look buttons and display =) */
     button {
         width: 100%;
         height: 70px;
-        font-size: 24px;
-        background-color: rgb(212, 237, 240);
+        font-size: 35px;
+        background-image: radial-gradient(circle, red, #aeecf5, rgb(78, 181, 250));
         border: none;
     }
     #dataInput {
-        height: 120px;
-        font-size: 40px;
+        height: 80px;
+        font-size: 50px;
         vertical-align: bottom;
         text-align: right;
         padding-right: 16px;
-        background-color: rgb(212, 237, 240);
+        background-image: linear-gradient(360deg, rgb(255, 118, 118),#12b5e7);
